<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/progressTxt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="progress content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <ProgressBar

                android:id="@+id/rowProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:visibility="gone" />

            <TextView
                style="@style/styleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:width="8dp"
                android:background="@color/transparent"
                android:padding="2dp"
                android:paddingLeft="5dp"

                android:paddingRight="5dp"
                android:text="  "
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView

                android:id="@+id/image"
                android:layout_width="@dimen/news_row_img"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_people" />




        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:id="@+id/text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Student Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
                android:textColor="@color/grey_dark"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">



                <TextView
                    android:id="@+id/tel"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="0797773552"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:id="@+id/txtApsent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/absent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed" />

                <TextView
                    android:id="@+id/txtDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/delayed"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:textColor="@color/green" />

                <Button


                    android:id="@+id/btn_Undo"
                    android:layout_width="50dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorPrimary"
                    android:bottomLeftRadius="30dp"
                    android:bottomRightRadius="30dp"
                    android:text="@string/undo"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">



                <Button
                    android:layout_weight="0.5"
                    android:id="@+id/btn_Absent"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorPrimaryLight"
                    android:bottomLeftRadius="30dp"
                    android:bottomRightRadius="30dp"
                    android:text="@string/absent"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_weight="0.5"
                    android:id="@+id/btn_Delay"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorPrimaryDark"
                    android:bottomLeftRadius="30dp"
                    android:bottomRightRadius="30dp"
                    android:text="@string/delay"
                    android:textColor="@android:color/white" />




            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"

        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:background="@color/grey_bg" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:background="@color/grey_bg" />

</LinearLayout>